--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ h11 @ file:///work/perseverance-python-buildout/croot/h11_1728386593025/work
 httpcore @ file:///work/perseverance-python-buildout/croot/httpcore_1728387201560/work
 httpx @ file:///io/perseverance-python-buildout/croot/httpx_1731702618493/work
 idna @ file:///work/perseverance-python-buildout/croot/idna_1728385935861/work
+imbalanced-learn @ file:///croot/imbalanced-learn_1738614356256/work
 ipykernel @ file:///croot/ipykernel_1737660677549/work
 ipython @ file:///croot/ipython_1734548052611/work
 ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
@@ -96,10 +97,12 @@ rfc3986_validator @ file:///work/perseverance-python-buildout/croot/rfc3986-vali
 rpds-py @ file:///croot/rpds-py_1736541261634/work
 scikit-learn @ file:///croot/scikit-learn_1737988764076/work
 scipy @ file:///croot/scipy_1743153247252/work/dist/scipy-1.15.2-cp313-cp313-linux_x86_64.whl#sha256=0fcdea24ba589efe1517ae1147ed7b83d8b1fcc30dbb90fe961c583a7d975654
+seaborn @ file:///croot/seaborn_1741185878286/work
 Send2Trash @ file:///croot/send2trash_1736540790175/work
 setuptools==72.1.0
 sip @ file:///croot/sip_1738856193618/work
 six @ file:///croot/six_1744271502820/work
+sklearn-compat @ file:///croot/sklearn-compat_1738003921409/work
 sniffio @ file:///work/perseverance-python-buildout/croot/sniffio_1728386342155/work
 soupsieve @ file:///work/perseverance-python-buildout/croot/soupsieve_1728385708765/work
 stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
@@ -110,6 +113,7 @@ tornado @ file:///io/buildout/croot/tornado_1735842129908/work
 traitlets @ file:///work/perseverance-python-buildout/croot/traitlets_1728385099292/work
 typing_extensions @ file:///croot/typing_extensions_1734714854207/work
 tzdata @ file:///croot/python-tzdata_1690578112552/work
+Unidecode @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_unidecode_1733714839/work
 urllib3 @ file:///croot/urllib3_1737133630106/work
 wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
 webencodings @ file:///work/perseverance-python-buildout/croot/webencodings_1728385731103/work
